# whosyouragent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: index.html  search.js  whosyouragent.html
docs/whosyouragent/: whosyouragent.html
src/whosyouragent/: __init__.py  browserVersions.json  whosyouragent.py
tests/: test_whosyouragent.py
